fix: apply letter-spacing everywhere

--- a/frontend/src/stylesheets/main.scss
+++ b/frontend/src/stylesheets/main.scss
@@ -8,6 +8,12 @@
 body {
   background-color: #fff1da;
   font-size: 16px;
+}
+
+*,
+*::before,
+*::after,
+*::placeholder {
   letter-spacing: -0.011em;
 }
 
